# ananda

./: .gitignore  AGENTS.md  README.md  build.gradle.kts  settings.gradle.kts
docs/: minecraft-adapter.md
gradle/wrapper/: gradle-wrapper.properties
native/directwrite/: CMakeLists.txt  directwrite_jni.cpp
src/main/kotlin/: AppControlsDemo.kt  DynamicIslandDemo.kt  LiquidBounceWidgetsDemo.kt  Main.kt  MatcherDemo.kt  Material3Demo.kt
src/main/kotlin/dev/unknownuser/ananda/animation/: Animation.kt  EnterTransition.kt
src/main/kotlin/dev/unknownuser/ananda/annotations/: FunctionalComponent.kt
src/main/kotlin/dev/unknownuser/ananda/backend/: RenderBackend.kt  ShapeInterpolatingRenderBackend.kt  SkiaRenderBackend.kt
src/main/kotlin/dev/unknownuser/ananda/component/: AppControls.kt  Component.kt  Controls.kt  FunctionalComponent.kt  Label.kt  TextureView.kt  VisualEffects.kt
src/main/kotlin/dev/unknownuser/ananda/debug/: DebuggerBridge.kt
src/main/kotlin/dev/unknownuser/ananda/draw/: ColorSupport.kt  Drawable.kt  Scene.kt
src/main/kotlin/dev/unknownuser/ananda/dsl/: AnandaSyntaxDsl.kt  Builders.kt  SceneDsl.kt  UiDsl.kt
src/main/kotlin/dev/unknownuser/ananda/event/: Events.kt
src/main/kotlin/dev/unknownuser/ananda/interaction/: InteractionProviders.kt
src/test/kotlin/dev/unknownuser/ananda/: AnandaSystemsTest.kt  AnimationFrameworkTest.kt  BundledCjkFontTest.kt  LiquidBounceConvertedThemeDsl.kt  LiquidBounceThemeFragmentsTest.kt  LiquidBounceWidgetsTest.kt  TestRenderBackend.kt  TextTestSupport.kt
tools/: render-gdiplus-comparison.ps1
(+48 files in other folders)
